--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header class="main-header">
-        <h1>🛠️ Giao diện Tác vụ Chính: Phục hồi & Upscale</h1>
+        <h1>🛠️ RESTORATION BY RYAN NGUYEN</h1>
     </header>
 
     <div class="content-wrapper">
         <nav class="sidebar">
-            <a href="#" class="active">Tác vụ chính</a>
-            <a href="#">Cài đặt API</a>
-            <a href="#">Hỗ trợ</a>
+            <a href="#" class="active">Phục Hồi Ảnh</a>
+            <a href="#">In Ấn Tranh Ảnh</a>
+            <a href="#">HLiên Hệ</a>
         </nav>
 
         <main class="main-content">
