--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             margin-top: 20px;
         }
 
-        /* Container cho từng ảnh kết quả (Bao gồm Watermark ảo) */
+        /* Container cho từng ảnh kết quả (Watermark lưới) */
         .result-image-container {
             position: relative;
-            cursor: pointer;
-            width: 45%; /* Chia 2 cột trong output module */
+            /* cursor: pointer; */ /* Đã xóa cursor pointer */
+            width: 45%; 
             border: 1px solid #333;
             border-radius: 4px;
             overflow: hidden;
@@ -97,7 +97,32 @@
             height: auto;
         }
         
-        /* SIMULATED WATERMARK OVERLAY */
+        /* WATERMARK LƯỚI */
+        .result-image-container::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: repeating-linear-gradient(
+                -45deg,
+                rgba(255, 255, 255, 0.05) 0,
+                rgba(255, 255, 255, 0.05) 5px,
+                transparent 5px,
+                transparent 10px
+            ), repeating-linear-gradient(
+                45deg,
+                rgba(255, 255, 255, 0.05) 0,
+                rgba(255, 255, 255, 0.05) 5px,
+                transparent 5px,
+                transparent 10px
+            );
+            background-size: 20px 20px;
+            pointer-events: none; /* Cho phép click xuyên qua nếu cần */
+            z-index: 1; /* Đảm bảo nằm trên ảnh */
+        }
+
         .result-image-container::after {
             content: "RYAN NGUYEN PREVIEW";
             position: absolute;
@@ -107,7 +132,8 @@
             color: rgba(255, 255, 255, 0.3); /* Màu trắng mờ */
             font-size: 24px;
             font-weight: bold;
-            pointer-events: none; /* Cho phép click xuyên qua */
+            pointer-events: none; 
+            z-index: 2; /* Đảm bảo nằm trên lưới */
         }
 
         .main-content > div:not(#landing-view) {
@@ -163,6 +189,14 @@
             margin: 0 10px;
             font-size: 18px;
             cursor: pointer;
+        }
+        /* Style cho nút Zalo */
+        .modal-buttons .zalo-btn {
+            background-color: #0080ff; /* Màu xanh Zalo */
+            padding: 12px 25px; /* Lớn hơn một chút */
+        }
+        .modal-buttons .zalo-btn:hover {
+            background-color: #0066cc;
         }
 
         .close {
@@ -243,7 +277,7 @@
                             <label for="restore-strength-input">Độ mạnh (Strength)</label>
                             <input type="number" id="restore-strength-input" min="0" max="10" step="0.1" value="4.0" placeholder="Độ mạnh (Strength)">
 
-                            <button id="restore-run-btn">🔥 BẮT ĐẦU (Trừ 1 lượt)</button>
+                            <button id="restore-run-btn">🔥 BẮT ĐẦU (Preview Miễn Phí)</button>
                         </div>
                     </div>
 
@@ -281,7 +315,7 @@
                             <label for="upscale-prompt-input">Prompt</label>
                             <input type="text" id="upscale-prompt-input" value="high quality upscale" placeholder="Ghi chú (Prompt)">
 
-                            <button id="upscale-run-btn" style="margin-top: 20px;">🔥 BẮT ĐẦU (Trừ 1 lượt)</button>
+                            <button id="upscale-run-btn" style="margin-top: 20px;">🔥 BẮT ĐẦU (Preview Miễn Phí)</button>
                         </div>
                     </div>
 
@@ -304,13 +338,12 @@
       <div class="modal-content">
         <img id="modalImage">
         <div class="modal-buttons">
-          <button id="downloadButton">⬇️ Thanh toán & Tải ảnh Sạch</button>
+          <button id="downloadButton" class="zalo-btn">Liên hệ Zalo 0832328262 để thanh toán và lấy ảnh gốc</button>
         </div>
       </div>
     </div>
 
     <script>
-        // Thêm biến global để lưu Task ID đang được xem
         window.currentModalTaskId = null;
     </script>
     <script src="script.js"></script> 
