--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         /* Container cho từng ảnh kết quả (Watermark lưới) */
         .result-image-container {
             position: relative;
-            /* cursor: pointer; */ /* Đã xóa cursor pointer */
             width: 45%; 
             border: 1px solid #333;
             border-radius: 4px;
@@ -119,8 +118,8 @@
                 transparent 10px
             );
             background-size: 20px 20px;
-            pointer-events: none; /* Cho phép click xuyên qua nếu cần */
-            z-index: 1; /* Đảm bảo nằm trên ảnh */
+            pointer-events: none; 
+            z-index: 1; 
         }
 
         .result-image-container::after {
@@ -129,11 +128,11 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) rotate(-20deg);
-            color: rgba(255, 255, 255, 0.3); /* Màu trắng mờ */
+            color: rgba(255, 255, 255, 0.3); 
             font-size: 24px;
             font-weight: bold;
             pointer-events: none; 
-            z-index: 2; /* Đảm bảo nằm trên lưới */
+            z-index: 2; 
         }
 
         .main-content > div:not(#landing-view) {
@@ -192,8 +191,8 @@
         }
         /* Style cho nút Zalo */
         .modal-buttons .zalo-btn {
-            background-color: #0080ff; /* Màu xanh Zalo */
-            padding: 12px 25px; /* Lớn hơn một chút */
+            background-color: #0080ff; 
+            padding: 12px 25px; 
         }
         .modal-buttons .zalo-btn:hover {
             background-color: #0066cc;
@@ -272,10 +271,10 @@
                             </div>
                             
                             <label for="restore-prompt-input">Prompt</label>
-                            <input type="text" id="restore-prompt-input" value="restore old photo, high quality" placeholder="Ghi chú (Prompt)">
+                            <input type="text" id="restore-prompt-input" placeholder="vd: nam việt nam 50 tuổi tóc đen, áo sơ mi trắng, nền xanh dương">
                             
-                            <label for="restore-strength-input">Độ mạnh (Strength)</label>
-                            <input type="number" id="restore-strength-input" min="0" max="10" step="0.1" value="4.0" placeholder="Độ mạnh (Strength)">
+                            <label for="restore-strength-input">Cường độ ( từ 2.5 (giống nhất) - 4 (đẹp nhất) )</label>
+                            <input type="number" id="restore-strength-input" min="2.5" max="4.0" step="0.1" value="4.0" placeholder="Cường độ">
 
                             <button id="restore-run-btn">🔥 BẮT ĐẦU (Preview Miễn Phí)</button>
                         </div>
