--- a/index.html
+++ b/index.html
@@ -123,18 +123,21 @@
             z-index: 1; 
         }
 
+        /* ⚠️ ĐÃ XÓA ::after ĐỂ LOẠI BỎ CHỮ RYAN NGUYEN PREVIEW */
+        /*
         .result-image-container::after {
             content: "RYAN NGUYEN PREVIEW";
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) rotate(-20deg);
-            color: rgba(255, 255, 255, 0.5); /* Tăng opacity chữ */
+            color: rgba(255, 255, 255, 0.5); 
             font-size: 24px;
             font-weight: bold;
             pointer-events: none; 
             z-index: 2; 
         }
+        */
 
         .main-content > div:not(#landing-view) {
             display: none; 
@@ -237,8 +240,8 @@
                             <p style="color: #bbb;">Ảnh kết quả sẽ hiển thị ở đây sau khi chạy task.</p>
                         </div>
                         
-                        <div id="restore-fulfillment-message" class="fulfillment-message" style="display: none;">
-                            Dòng chữ download file ảnh gốc xin liên hệ 0832328262 Phí 50k/tấm
+                        <div id="restore-fulfillment-message" class="fulfillment-message">
+                            Liên hệ Zalo 0832328262 để thanh toán và lấy ảnh gốc (Phí 50k/tấm)
                         </div>
                     </div>
                 </div>
@@ -279,8 +282,8 @@
                              <p style="color: #bbb;">Ảnh kết quả sẽ hiển thị ở đây sau khi chạy task.</p>
                         </div>
                         
-                        <div id="upscale-fulfillment-message" class="fulfillment-message" style="display: none;">
-                            Dòng chữ download file ảnh gốc xin liên hệ 0832328262 Phí 50k/tấm
+                        <div id="upscale-fulfillment-message" class="fulfillment-message">
+                            Liên hệ Zalo 0832328262 để thanh toán và lấy ảnh gốc (Phí 50k/tấm)
                         </div>
                     </div>
                 </div>
