--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         /* Container cho từng ảnh kết quả (Watermark lưới) */
         .result-image-container {
             position: relative;
+            cursor: pointer; /* Khôi phục cursor pointer để báo hiệu có thể click */
             width: 45%; 
             border: 1px solid #333;
             border-radius: 4px;
@@ -119,8 +120,8 @@
                 transparent 10px
             );
             background-size: 20px 20px;
-            pointer-events: none; 
-            z-index: 1; 
+            pointer-events: none; /* Cho phép click xuyên qua nếu cần */
+            z-index: 1; /* Đảm bảo nằm trên ảnh */
         }
 
         /* ⚠️ ĐÃ XÓA ::after ĐỂ LOẠI BỎ CHỮ RYAN NGUYEN PREVIEW */
@@ -151,18 +152,109 @@
             padding: 5px;
         }
 
-        /* STYLE CHO THÔNG BÁO THANH TOÁN MỚI */
-        .fulfillment-message {
-            display: none; /* Mặc định ẩn */
-            background-color: #0d47a1;
-            color: white;
-            padding: 15px;
-            margin-top: 20px;
-            border-radius: 4px;
+        /* --- MODAL (LIGHTBOX) CSS --- */
+        .modal {
+            display: none; 
+            position: fixed; 
+            z-index: 1000; 
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.9);
+        }
+
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 900px;
+            padding-top: 50px;
+        }
+
+        .modal-content img {
+            width: 100%;
+            height: auto;
+        }
+        
+        /* ⚠️ WATERMARK LƯỚI CHO ẢNH TRONG MODAL */
+        /* Thêm một overlay có watermark cho ảnh trong modal */
+        #modalImageWrapper { /* Wrapper mới cho ảnh trong modal */
+            position: relative;
+            margin: 0 auto;
+            max-width: 900px;
+        }
+        #modalImageWrapper::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: repeating-linear-gradient(
+                -45deg,
+                rgba(255, 255, 255, 0.1) 0,
+                rgba(255, 255, 255, 0.1) 5px,
+                transparent 5px,
+                transparent 10px
+            ), repeating-linear-gradient(
+                45deg,
+                rgba(255, 255, 255, 0.1) 0,
+                rgba(255, 255, 255, 0.1) 5px,
+                transparent 5px,
+                transparent 10px
+            );
+            background-size: 20px 20px;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .modal-buttons {
             text-align: center;
-            font-weight: bold;
-            font-size: 1.1em;
+            padding: 20px;
+        }
+        
+        .modal-buttons button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border: none;
+            border-radius: 4px;
+            margin: 0 10px;
+            font-size: 18px;
             cursor: pointer;
+        }
+        /* Style cho nút Zalo */
+        .modal-buttons .zalo-btn {
+            background-color: #0080ff; 
+            padding: 12px 25px; 
+        }
+        .modal-buttons .zalo-btn:hover {
+            background-color: #0066cc;
+        }
+
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* ẨN THÔNG BÁO THANH TOÁN CỐ ĐỊNH KHI CÓ MODAL TRỞ LẠI */
+        .fulfillment-message {
+            display: none !important; 
         }
 
     </style>
@@ -289,6 +381,17 @@
                 </div>
             </div>
         </main>
+    </div>
+
+    <div id="imageModal" class="modal">
+      <span class="close">&times;</span>
+      <div class="modal-content">
+        <div id="modalImageWrapper"> <img id="modalImage">
+        </div>
+        <div class="modal-buttons">
+          <button id="downloadButton" class="zalo-btn">Liên hệ Zalo 0832328262 để thanh toán và lấy ảnh gốc (Phí 50k/tấm)</button>
+        </div>
+      </div>
     </div>
 
     <script>
