--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         /* Container cho từng ảnh kết quả (Watermark lưới) */
         .result-image-container {
             position: relative;
-            cursor: pointer; /* Khôi phục cursor pointer để báo hiệu có thể click */
             width: 45%; 
             border: 1px solid #333;
             border-radius: 4px;
@@ -105,7 +104,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            /* Tăng nhẹ opacity để nhìn rõ hơn */
             background-image: repeating-linear-gradient(
                 -45deg,
                 rgba(255, 255, 255, 0.1) 0,
@@ -120,25 +118,9 @@
                 transparent 10px
             );
             background-size: 20px 20px;
-            pointer-events: none; /* Cho phép click xuyên qua nếu cần */
-            z-index: 1; /* Đảm bảo nằm trên ảnh */
-        }
-
-        /* ⚠️ ĐÃ XÓA ::after ĐỂ LOẠI BỎ CHỮ RYAN NGUYEN PREVIEW */
-        /*
-        .result-image-container::after {
-            content: "RYAN NGUYEN PREVIEW";
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(-20deg);
-            color: rgba(255, 255, 255, 0.5); 
-            font-size: 24px;
-            font-weight: bold;
             pointer-events: none; 
-            z-index: 2; 
+            z-index: 1; 
         }
-        */
 
         .main-content > div:not(#landing-view) {
             display: none; 
@@ -152,107 +134,7 @@
             padding: 5px;
         }
 
-        /* --- MODAL (LIGHTBOX) CSS --- */
-        .modal {
-            display: none; 
-            position: fixed; 
-            z-index: 1000; 
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.9);
-        }
-
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 80%;
-            max-width: 900px;
-            padding-top: 50px;
-        }
-
-        .modal-content img {
-            width: 100%;
-            height: auto;
-        }
-        
-        /* ⚠️ WATERMARK LƯỚI CHO ẢNH TRONG MODAL */
-        /* Thêm một overlay có watermark cho ảnh trong modal */
-        #modalImageWrapper { /* Wrapper mới cho ảnh trong modal */
-            position: relative;
-            margin: 0 auto;
-            max-width: 900px;
-        }
-        #modalImageWrapper::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: repeating-linear-gradient(
-                -45deg,
-                rgba(255, 255, 255, 0.1) 0,
-                rgba(255, 255, 255, 0.1) 5px,
-                transparent 5px,
-                transparent 10px
-            ), repeating-linear-gradient(
-                45deg,
-                rgba(255, 255, 255, 0.1) 0,
-                rgba(255, 255, 255, 0.1) 5px,
-                transparent 5px,
-                transparent 10px
-            );
-            background-size: 20px 20px;
-            pointer-events: none;
-            z-index: 1;
-        }
-
-        .modal-buttons {
-            text-align: center;
-            padding: 20px;
-        }
-        
-        .modal-buttons button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border: none;
-            border-radius: 4px;
-            margin: 0 10px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-        /* Style cho nút Zalo */
-        .modal-buttons .zalo-btn {
-            background-color: #0080ff; 
-            padding: 12px 25px; 
-        }
-        .modal-buttons .zalo-btn:hover {
-            background-color: #0066cc;
-        }
-
-        .close {
-            position: absolute;
-            top: 15px;
-            right: 35px;
-            color: #f1f1f1;
-            font-size: 40px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: #bbb;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        /* ẨN THÔNG BÁO THANH TOÁN CỐ ĐỊNH KHI CÓ MODAL TRỞ LẠI */
+        /* STYLE CHO THÔNG BÁO THANH TOÁN MỚI */
         .fulfillment-message {
             display: none !important; 
         }
@@ -359,7 +241,7 @@
                             </div>
 
                             <label for="upscale-prompt-input">Prompt</label>
-                            <input type="text" id="upscale-prompt-input" value="high quality upscale" placeholder="Ghi chú (Prompt)">
+                            <input type="text" id="upscale-prompt-input" placeholder="vd: nam việt nam 50 tuổi tóc đen, áo sơ mi trắng, nền xanh dương">
 
                             <button id="upscale-run-btn" style="margin-top: 20px;">🔥 BẮT ĐẦU (Preview Miễn Phí)</button>
                         </div>
@@ -381,17 +263,6 @@
                 </div>
             </div>
         </main>
-    </div>
-
-    <div id="imageModal" class="modal">
-      <span class="close">&times;</span>
-      <div class="modal-content">
-        <div id="modalImageWrapper"> <img id="modalImage">
-        </div>
-        <div class="modal-buttons">
-          <button id="downloadButton" class="zalo-btn">Liên hệ Zalo 0832328262 để thanh toán và lấy ảnh gốc (Phí 50k/tấm)</button>
-        </div>
-      </div>
     </div>
 
     <script>
